# widgex

./: .gitignore  Cargo.toml  ISSUE.md  LICENSE  README.md  search.md
apps/renderer/: index.html  package-lock.json  package.json  vite.config.ts
apps/renderer/src/: App.tsx  main.tsx  style.css  widgetTree.test.ts  widgetTree.ts
crates/widgex-cli/: Cargo.toml
crates/widgex-cli/src/: lib.rs  main.rs
crates/widgex-cli/tests/: cli_tests.rs
crates/widgex-core/: Cargo.toml
crates/widgex-core/src/: lib.rs
crates/widgex-core/tests/: config_tests.rs
crates/widgex-ipc/: Cargo.toml
crates/widgex-ipc/src/: lib.rs
crates/widgex-ipc/tests/: protocol_tests.rs
crates/widgex-platform/: Cargo.toml
crates/widgex-platform/src/: lib.rs
crates/widgex-platform/tests/: platform_tests.rs
crates/widgex-source/: Cargo.toml
crates/widgex-source/src/: lib.rs
crates/widgex-webview/: Cargo.toml
crates/widgex-webview/src/: lib.rs  linux.rs  macos.rs  native_renderer.rs  stub.rs  windows.rs  x11_window.rs
crates/widgex-webview/tests/: window_tests.rs
crates/widgexd/: Cargo.toml
crates/widgexd/src/: lib.rs  main.rs
crates/widgexd/tests/: daemon_tests.rs
docs/: architecture.md  config.md  platform.md
examples/desktop-clock/: config.toml  style.css
examples/top-bar/: config.toml  style.css
pkg/aur/: .SRCINFO  PKGBUILD  widgex.service
