[workspace]
members = [
  "crates/widgex-core",
  "crates/widgex-source",
  "crates/widgex-webview",
  "crates/widgex-ipc",
  "crates/widgex-platform",
  "crates/widgexd",
  "crates/widgex-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/eugene/widgex"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
directories = "6.0"
gtk = "0.18"
gtk-layer-shell = { version = "0.8.2", features = ["v0_6"] }
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
thiserror = "2.0"
toml = "0.9"
