[package]
name = "widgex-webview"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
gtk.workspace = true
gtk-layer-shell.workspace = true
rust-embed = "8"
serde_json.workspace = true
widgex-core = { path = "../widgex-core" }
widgex-source = { path = "../widgex-source" }
wry = "0.55"
