[package]
name = "widgex-webview"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
gtk.workspace = true
libc.workspace = true
gtk-layer-shell.workspace = true
gdk-pixbuf = "0.18"
rust-embed = "8"
serde.workspace = true
serde_json.workspace = true
widgex-core = { path = "../widgex-core" }
widgex-ipc = { path = "../widgex-ipc" }
widgex-source = { path = "../widgex-source" }
wry = "0.55"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.2"

[dev-dependencies]
tempfile.workspace = true
