[package]
name = "widgexd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
widgex-core = { path = "../widgex-core" }
widgex-ipc = { path = "../widgex-ipc" }
widgex-platform = { path = "../widgex-platform" }

[dev-dependencies]
tempfile.workspace = true
